[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-triage-toolkit"
version = "0.1.0"
description = "A Python CLI to parse heterogeneous logs, generate an incident timeline, and draft an RCA/runbook skeleton."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Barney Smith" }]
dependencies = [
  "typer==0.21.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "pytest-cov==5.0.0",
  "ruff==0.5.6",
]

[project.scripts]
triage = "triage_toolkit.cli:main"

[tool.setuptools.packages.find]
include = ["triage_toolkit*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
